# PhysicsOS

./: .env.example  .gitignore  ARCHITECTURE.md  MANIFEST.in  QUICKSTART.md  README.md  physicsOS.md  pyproject.toml  taps.md  vm.md
configs/: surrogates.example.json
docs/knowledge_seed/: core_formulas.md
examples/: deepagents_surrogate_smoke.py  openai_compatible_agent.py  physicsos_workflow_smoke.py  surrogate_registry_smoke.py  taps_coupled_reaction_diffusion_2d.py  taps_geometry_encoded_poisson_2d.py  taps_geometry_hole_poisson_2d.py  taps_mesh_graph_poisson_2d.py  taps_poisson_1d.py  taps_poisson_2d.py  taps_reaction_diffusion_2d.py  taps_thermal_workflow.py
models/: README.md
physicsos/: __init__.py  cli.py  config.py  events.py  paths.py
physicsos/agents/: __init__.py  main.py  openai_compatible.py  prompts.py  runtime.py  structured.py  subagents.py
physicsos/backends/: __init__.py  catalog.py  geometry_mesh.py  knowledge_base.py  physics_registry.py  solver_base.py  surrogate_adapters.py  surrogate_catalog.py  surrogate_inference.py  surrogate_registry.py  surrogate_runtime.py  taps_generic.py  taps_thermal.py
physicsos/cloud/: __init__.py  auth.py  config.py  foamvm_client.py
physicsos/schemas/: __init__.py  agents.py  boundary.py  common.py  contracts.py  geometry.py  knowledge.py  materials.py  mesh.py  operators.py  postprocess.py  problem.py  solver.py  surrogate.py  taps.py  verification.py
physicsos/tools/: __init__.py  catalog_tools.py  geometry_tools.py  knowledge_tools.py  memory_tools.py  postprocess_tools.py  problem_tools.py  registry.py  solver_tools.py  surrogate_tools.py  taps_tools.py  verification_tools.py  workflow_tools.py
physicsos/workflows/: __init__.py  taps_thermal.py  universal.py
runners/foamvm/: .env.example  PHYSICSOS.md  README.md  next.config.ts  package-lock.json  package.json
runners/foamvm/app/: globals.css  layout.tsx  page.tsx
runners/foamvm/app/account/: page.tsx
runners/foamvm/app/actions/: auth.ts  tokens.ts
runners/foamvm/app/admin/: page.tsx
runners/foamvm/app/admin/tokens/: generate-form.tsx  page.tsx
runners/foamvm/app/api/cfd/: route.ts
runners/foamvm/app/api/cfd/[id]/: route.ts
runners/foamvm/app/api/cfd/[id]/events/: route.ts
runners/foamvm/app/api/files/: route.ts
runners/foamvm/app/api/physicsos/jobs/: route.ts
runners/foamvm/app/api/test/: route.ts
runners/foamvm/app/auth/confirm/: route.ts
runners/foamvm/app/auth/login/: login-form.tsx  page.tsx
runners/foamvm/app/geometry-labeler/: geometry-labeler.tsx  page.tsx
runners/foamvm/app/redeem/: page.tsx  redeem-form.tsx
runners/foamvm/components/: home-page.tsx
runners/foamvm/e2b-template/: Dockerfile
runners/foamvm/lib/: auth.ts  claude-md.ts  env.ts  physicsos-openfoam-runner.ts  run-runtime.ts  run-tokens.ts  runs.ts  sandbox.ts
runners/foamvm/lib/supabase/: admin.ts  client.ts  server.ts
runners/foamvm/supabase/: schema.sql
scripts/: build_knowledge_base.py  download_surrogate_weights.py  seed_computational_physics_knowledge.py
tests/: test_scaffold.py
