[project]
name = "physicsos"
version = "0.1.0"
description = "AI-native physics simulation OS with TAPS-first physics IR, solver planning, and cloud runner tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "numpy>=1.26",
]
keywords = ["physics", "simulation", "pde", "fem", "agents", "neural-operator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
physicsos = "physicsos.cli:main"

[project.urls]
Homepage = "https://github.com/fzj1214/PhysicsOS"
Repository = "https://github.com/fzj1214/PhysicsOS"
Documentation = "https://github.com/fzj1214/PhysicsOS/blob/main/ARCHITECTURE.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
agents = [
  "deepagents",
  "langgraph",
  "langchain-openai",
]
geometry = [
  "gmsh>=4.13",
  "meshio>=5.3",
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5",
]
all = [
  "deepagents",
  "langgraph",
  "langchain-openai",
  "gmsh>=4.13",
  "meshio>=5.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["physicsos*"]
exclude = ["runners*", "data*", "models*", "configs*", "scratch*", "docs*", "scripts*", "tests*", "examples*"]
